--- a/game.html
+++ b/game.html
@@ -5,6 +5,7 @@
 var canvas;
 var canvasContext;
 var ballX = 50;
+var ballSpeedX = 5;
 
 window.onload = function() {
 	console.log('Load');
@@ -12,7 +13,7 @@ window.onload = function() {
 	canvasContext = canvas.getContext('2d');
 
 	var framesPerSecond = 30;
-	setInterval(function(){
+	setInterval(function() {
 		moveEverything();
 		drawEverything();
 	}, 1000 / framesPerSecond);
@@ -20,18 +21,35 @@ window.onload = function() {
 }
 
 function moveEverything() {
-ballX = ballX + 5;
+	ballX = ballX + ballSpeedX;
+	if (ballX > canvas.width){
+		ballSpeedX = -ballSpeedX;
+	} else if (ballX < 0){
+		ballSpeedX = -ballSpeedX;
+	}
 }
 
 function drawEverything() {
-	
-	
-	canvasContext.fillStyle = 'black';
-	canvasContext.fillRect(0, 0, canvas.width, canvas.height);
-	canvasContext.fillStyle = 'white';
-	canvasContext.fillRect(0, 210, 10, 100);
-	canvasContext.fillStyle = 'red';
-	canvasContext.fillRect(ballX, 100, 10, 10);
+	//black screen 
+	colorRect(0, 0, canvas.width, canvas.height, 'black');
+	//left side
+	colorRect(0, 210, 10, 100, 'white');
+	//ball -> should be circle not rect
+	colorCircle(ballX, 150, 10, "white");
+}
+
+function colorCircle(centerX, centerY, radius, drawColor){
+	canvasContext.fillStyle = drawColor;
+	canvasContext.beginPath();
+	//no need to change the last three params - 
+	//they are always the same for a circle
+	canvasContext.arc(centerX, centerY, radius, 0, Math.PI*2, true);
+	canvasContext.fill();
+}
+
+function colorRect(leftX, topY, width, height, drawColor){
+	canvasContext.fillStyle = drawColor;
+	canvasContext.fillRect(leftX, topY, width, height);
 }
 
 
