--- a/game.html
+++ b/game.html
@@ -5,7 +5,23 @@
 var canvas;
 var canvasContext;
 var ballX = 50;
-var ballSpeedX = 5;
+var ballY = 50;
+var ballSpeedX = 10;
+var ballSpeedY = 4
+
+var paddle1Y = 250;
+const PADDLE_HEIGHT = 100;
+
+function calculateMousePos(evt){
+	var rect = canvas.getBoundingClientRect();
+	var root = document.documentElement;
+	var mouseX = evt.clientX - rect.left - root.scrollLeft;
+	var mouseY = evt.clientY - rect.top - root.scrollTop;
+	return {
+		x: mouseX,
+		y: mouseY
+	}
+}
 
 window.onload = function() {
 	console.log('Load');
@@ -18,24 +34,36 @@ window.onload = function() {
 		drawEverything();
 	}, 1000 / framesPerSecond);
 
+	canvas.addEventListener('mousemove', 
+		function(evt){
+			var mousePos = calculateMousePos(evt);
+			paddle1Y = mousePos.y - (PADDLE_HEIGHT/2);
+		});
+
 }
 
 function moveEverything() {
 	ballX = ballX + ballSpeedX;
+	ballY = ballY + ballSpeedY;
 	if (ballX > canvas.width){
 		ballSpeedX = -ballSpeedX;
 	} else if (ballX < 0){
 		ballSpeedX = -ballSpeedX;
+	}
+	if (ballY > canvas.height){
+		ballSpeedY = -ballSpeedY;
+	} else if (ballY < 0){
+		ballSpeedY = -ballSpeedY;
 	}
 }
 
 function drawEverything() {
 	//black screen 
 	colorRect(0, 0, canvas.width, canvas.height, 'black');
-	//left side
-	colorRect(0, 210, 10, 100, 'white');
+	//left players paddle
+	colorRect(0, paddle1Y, 10, PADDLE_HEIGHT, 'white');
 	//ball -> should be circle not rect
-	colorCircle(ballX, 150, 10, "white");
+	colorCircle(ballX, ballY, 10, "white");
 }
 
 function colorCircle(centerX, centerY, radius, drawColor){
