Second Paddle, Ball Reset

--- a/game.html
+++ b/game.html
@@ -10,7 +10,9 @@ var ballSpeedX = 10;
 var ballSpeedY = 4
 
 var paddle1Y = 250;
+var paddle2Y = 250;
 const PADDLE_HEIGHT = 100;
+const PADDLE_WIDTH = 10;
 
 function calculateMousePos(evt){
 	var rect = canvas.getBoundingClientRect();
@@ -42,17 +44,36 @@ window.onload = function() {
 
 }
 
+function ballReset(){
+	ballSpeedX = -ballSpeedX;
+	ballX = canvas.width/2;
+	ballY = canvas.height/2;
+}
+
 function moveEverything() {
 	ballX = ballX + ballSpeedX;
 	ballY = ballY + ballSpeedY;
-	if (ballX > canvas.width){
-		ballSpeedX = -ballSpeedX;
-	} else if (ballX < 0){
-		ballSpeedX = -ballSpeedX;
+	
+	if(ballX < 0) {
+		if(ballY > paddle1Y &&
+			ballY < paddle1Y+PADDLE_HEIGHT) {
+			ballSpeedX = -ballSpeedX;
+		} else {
+			ballReset();	
+		}
 	}
-	if (ballY > canvas.height){
+	if(ballX > canvas.width) {
+		if(ballY > paddle2Y &&
+			ballY < paddle2Y+PADDLE_HEIGHT) {
+			ballSpeedX = -ballSpeedX;
+		} else {
+			ballReset();	
+		}
+	}
+	if(ballY < 0) {
 		ballSpeedY = -ballSpeedY;
-	} else if (ballY < 0){
+	}
+	if(ballY > canvas.height) {
 		ballSpeedY = -ballSpeedY;
 	}
 }
@@ -61,7 +82,9 @@ function drawEverything() {
 	//black screen 
 	colorRect(0, 0, canvas.width, canvas.height, 'black');
 	//left players paddle
-	colorRect(0, paddle1Y, 10, PADDLE_HEIGHT, 'white');
+	colorRect(0, paddle1Y, PADDLE_WIDTH, PADDLE_HEIGHT, 'white');
+	//right players paddle
+	colorRect(canvas.width-PADDLE_WIDTH, paddle2Y, PADDLE_WIDTH, PADDLE_HEIGHT, 'white');
 	//ball -> should be circle not rect
 	colorCircle(ballX, ballY, 10, "white");
 }
