--- a/game.html
+++ b/game.html
@@ -7,7 +7,10 @@ var canvasContext;
 var ballX = 50;
 var ballY = 50;
 var ballSpeedX = 10;
-var ballSpeedY = 4
+var ballSpeedY = 4;
+
+var player1Score = 0;
+var player2Score = 0;
 
 var paddle1Y = 250;
 var paddle2Y = 250;
@@ -50,16 +53,27 @@ function ballReset(){
 	ballY = canvas.height/2;
 }
 
+function computerMovement(){
+	var paddle2YCenter = paddle2Y + (PADDLE_HEIGHT/2);
+	if (paddle2YCenter < ballY - 35) {
+		paddle2Y += 6;
+	} else if (paddle2YCenter > ballY + 35){
+		paddle2Y -= 6;
+	}
+}
+
 function moveEverything() {
-	ballX = ballX + ballSpeedX;
-	ballY = ballY + ballSpeedY;
+	computerMovement()
+	ballX += ballSpeedX;
+	ballY += ballSpeedY;
 	
 	if(ballX < 0) {
 		if(ballY > paddle1Y &&
 			ballY < paddle1Y+PADDLE_HEIGHT) {
 			ballSpeedX = -ballSpeedX;
 		} else {
-			ballReset();	
+			ballReset();
+			player2Score += 1;	
 		}
 	}
 	if(ballX > canvas.width) {
@@ -67,7 +81,8 @@ function moveEverything() {
 			ballY < paddle2Y+PADDLE_HEIGHT) {
 			ballSpeedX = -ballSpeedX;
 		} else {
-			ballReset();	
+			ballReset();
+			player1Score += 1;	
 		}
 	}
 	if(ballY < 0) {
@@ -87,6 +102,9 @@ function drawEverything() {
 	colorRect(canvas.width-PADDLE_WIDTH, paddle2Y, PADDLE_WIDTH, PADDLE_HEIGHT, 'white');
 	//ball -> should be circle not rect
 	colorCircle(ballX, ballY, 10, "white");
+
+	canvasContext.fillText(player1Score, 100, 100);
+	canvasContext.fillText(player2Score, canvas.width - 100, 100);
 }
 
 function colorCircle(centerX, centerY, radius, drawColor){
