--- a/game.html
+++ b/game.html
@@ -11,6 +11,10 @@ var ballSpeedY = 4;
 
 var player1Score = 0;
 var player2Score = 0;
+const WINNING_SCORE = 3;
+
+var showingWinScreen = false;
+
 
 var paddle1Y = 250;
 var paddle2Y = 250;
@@ -48,6 +52,13 @@ window.onload = function() {
 }
 
 function ballReset(){
+	if(player1Score >= WINNING_SCORE || 
+		player2Score >= WINNING_SCORE){
+		player1Score = 0;
+		player2Score = 0;
+		showingWinScreen = true;
+	}
+
 	ballSpeedX = -ballSpeedX;
 	ballX = canvas.width/2;
 	ballY = canvas.height/2;
@@ -63,6 +74,11 @@ function computerMovement(){
 }
 
 function moveEverything() {
+	if (showingWinScreen){
+		return;
+	}
+
+
 	computerMovement()
 	ballX += ballSpeedX;
 	ballY += ballSpeedY;
@@ -71,18 +87,28 @@ function moveEverything() {
 		if(ballY > paddle1Y &&
 			ballY < paddle1Y+PADDLE_HEIGHT) {
 			ballSpeedX = -ballSpeedX;
+
+			var deltaY = ballY
+						-(paddle1Y + PADDLE_HEIGHT/2);
+			ballSpeedY = deltaY * 0.35;
 		} else {
+			player2Score += 1;//before ball reset
 			ballReset();
-			player2Score += 1;	
+				
 		}
 	}
 	if(ballX > canvas.width) {
 		if(ballY > paddle2Y &&
 			ballY < paddle2Y+PADDLE_HEIGHT) {
 			ballSpeedX = -ballSpeedX;
+
+			var deltaY = ballY
+						-(paddle2Y + PADDLE_HEIGHT/2);
+			ballSpeedY = deltaY * 0.35;
 		} else {
+			player1Score += 1;//before ball reset	
 			ballReset();
-			player1Score += 1;	
+			
 		}
 	}
 	if(ballY < 0) {
@@ -96,6 +122,12 @@ function moveEverything() {
 function drawEverything() {
 	//black screen 
 	colorRect(0, 0, canvas.width, canvas.height, 'black');
+
+	if (showingWinScreen){
+		canvasContext.fillStyle = "white";
+		canvasContext.fillText("Click To Continue!", 100, 100);
+		return;
+	}
 	//left players paddle
 	colorRect(0, paddle1Y, PADDLE_WIDTH, PADDLE_HEIGHT, 'white');
 	//right players paddle
